--- a/Assignment3.tex
+++ b/Assignment3.tex
@@ -45,7 +45,7 @@
 
 \pagestyle{plain} \pagenumbering{arabic}
 
-\title{{\bf Assignment 3} \\ {\large Deadline: }}
+\title{{\bf Assignment 3} \\ {\large ID: 120037910002 } {\large Name: Xingguo Jia } {\large Email: jiaxg1998@sjtu.edu.cn}}
 
 \author{}
 \date{}
@@ -69,27 +69,65 @@
 Prove or disprove the following statement. If all capacities in a network are distinct,
  then there exists a unique flow function that gives the maximum flow.
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
 
 \begin{exercise}
 An edge of a flow network is called \textbf{critical} if decreasing the capacity of this edge results in a decrease in the maximum flow value. Present an efficient algorithm that, given an $s$-$t$ network $G$ finds any critical edge in a network(assuming one exists).
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
 
 \begin{exercise}
 Let $G=(V,E)$ be an undirected weighted graph with two distinguished vertices $s,t\in V$. Give an efficient algorithm to find a minimum weight cut that separates $s$ from $t$.
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
 
 \begin{exercise}
 You are given a matrix with fractional elements between $0$ and $1$. The sum of all numbers in each row and in each column is integer. Prove that we can always round each element to $0$ or $1$ so that the sum of each row and each column remains unchanged and design a polynomial time algorithm to find such a rounding result.
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
 
 \begin{exercise}
 Suppose that, in addition to edge capacities, a flow network has \textbf{vertex capacities}.
 That is each vertex has a limit on how much flow can pass though. Show how to transform a flow network $G=(V,E)$ with vertex capacities into an equivalent flow network $G'=(V',E')$ without vertex capacities, such that a maximum flow in $G'$ has the same value as a maximum flow in $G$. How many vertices and edges does $G'$ have?
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
+
 
 \begin{exercise}
 Consider a bipartite graph $G=(X\cup Y,E)$ with parts $X$ and $Y$. Each part contains $2k$ vertices (i.e. $|X|=|Y|=2k$). Suppose that $deg(u)\geq k$ for every $u\in X\cup Y$. Prove that $G$ has a perfect matching.
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
+
 
 \begin{exercise}
 You are designing a experiment in which you want to measure certain properties $p_1,\ldots ,p_n$ of a yeast culture. You have a set of tools $t_1,\ldots ,t_m$ that can each measure a subset $S_i$ of the properties. For example, tool $t_i$ measures $S_i$ may equal $\{p_7,p_8\}$. To be sure that your results are not due to noise or other artifact, you must measure every property at least $k$ times using $k$ different tools.
@@ -98,9 +136,23 @@ You are designing a experiment in which you want to measure certain properties $
 \item Suppose each tool $t_i$ comes from manufacturer $M_i$ and we have the additional constraint that the tools to test any property $p_i$ can't all come from the same manufacturer. Give a polynomial-time algorithm to solve this problem.
 \end{itemize}
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
+
 
 \begin{exercise}
 Consider a flow network $G=(V,E)$ with positive edge capacities $\{c(e)\}$. Let $f:E\rightarrow \mathbb{R}_{\geq 0}$ be a maximum flow in $G$, and $G_f$ be the residual graph. Denote by $S$ the set of nodes reachable from $s$ in $G_f$ and by $T$ the set of nodes from which $t$ is reachable in $G_f$.  Prove that $V=S\cup T$ if and only if $G$ has a \textbf{unique} $s$-$t$ minimum cut.
 \end{exercise}
+\begin{itemize}
+    \item 
+    \item 
+\end{itemize}
+
+
+
 
 \end{document}
