add assignment3 itemize

--- a/Assignment3.tex
+++ b/Assignment3.tex
@@ -69,6 +69,8 @@
 Prove or disprove the following statement. If all capacities in a network are distinct,
  then there exists a unique flow function that gives the maximum flow.
 \end{exercise}
+
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
@@ -79,6 +81,8 @@ Prove or disprove the following statement. If all capacities in a network are di
 \begin{exercise}
 An edge of a flow network is called \textbf{critical} if decreasing the capacity of this edge results in a decrease in the maximum flow value. Present an efficient algorithm that, given an $s$-$t$ network $G$ finds any critical edge in a network(assuming one exists).
 \end{exercise}
+
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
@@ -89,6 +93,8 @@ An edge of a flow network is called \textbf{critical} if decreasing the capacity
 \begin{exercise}
 Let $G=(V,E)$ be an undirected weighted graph with two distinguished vertices $s,t\in V$. Give an efficient algorithm to find a minimum weight cut that separates $s$ from $t$.
 \end{exercise}
+
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
@@ -99,6 +105,8 @@ Let $G=(V,E)$ be an undirected weighted graph with two distinguished vertices $s
 \begin{exercise}
 You are given a matrix with fractional elements between $0$ and $1$. The sum of all numbers in each row and in each column is integer. Prove that we can always round each element to $0$ or $1$ so that the sum of each row and each column remains unchanged and design a polynomial time algorithm to find such a rounding result.
 \end{exercise}
+
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
@@ -110,6 +118,8 @@ You are given a matrix with fractional elements between $0$ and $1$. The sum of 
 Suppose that, in addition to edge capacities, a flow network has \textbf{vertex capacities}.
 That is each vertex has a limit on how much flow can pass though. Show how to transform a flow network $G=(V,E)$ with vertex capacities into an equivalent flow network $G'=(V',E')$ without vertex capacities, such that a maximum flow in $G'$ has the same value as a maximum flow in $G$. How many vertices and edges does $G'$ have?
 \end{exercise}
+
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
@@ -121,6 +131,8 @@ That is each vertex has a limit on how much flow can pass though. Show how to tr
 \begin{exercise}
 Consider a bipartite graph $G=(X\cup Y,E)$ with parts $X$ and $Y$. Each part contains $2k$ vertices (i.e. $|X|=|Y|=2k$). Suppose that $deg(u)\geq k$ for every $u\in X\cup Y$. Prove that $G$ has a perfect matching.
 \end{exercise}
+
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
@@ -136,6 +148,7 @@ You are designing a experiment in which you want to measure certain properties $
 \item Suppose each tool $t_i$ comes from manufacturer $M_i$ and we have the additional constraint that the tools to test any property $p_i$ can't all come from the same manufacturer. Give a polynomial-time algorithm to solve this problem.
 \end{itemize}
 \end{exercise}
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
@@ -147,6 +160,8 @@ You are designing a experiment in which you want to measure certain properties $
 \begin{exercise}
 Consider a flow network $G=(V,E)$ with positive edge capacities $\{c(e)\}$. Let $f:E\rightarrow \mathbb{R}_{\geq 0}$ be a maximum flow in $G$, and $G_f$ be the residual graph. Denote by $S$ the set of nodes reachable from $s$ in $G_f$ and by $T$ the set of nodes from which $t$ is reachable in $G_f$.  Prove that $V=S\cup T$ if and only if $G$ has a \textbf{unique} $s$-$t$ minimum cut.
 \end{exercise}
+
+\textbf{Solution:}
 \begin{itemize}
     \item 
     \item 
