--- a/Assignment3.tex
+++ b/Assignment3.tex
@@ -212,7 +212,7 @@ Consider a flow network $G=(V,E)$ with positive edge capacities $\{c(e)\}$. Let 
     \begin{displaymath}
         X=V\setminus(S\cup T),X\neq \varnothing
     \end{displaymath}
-    \item Since $C_1=(S\cup X,T)$ and $C_2=(S,X\cup T)$ are two distinct minimum cut, we have a contradiction.
+    Since $C_1=(S\cup X,T)$ and $C_2=(S,X\cup T)$ are two distinct minimum cut, we have a contradiction.
     
 \end{itemize}
 \newpage
